# src/routes/v1/admin.js
@@ -3,7 +3,7 @@ const { adminAuth } = require('../../services/authServices.js');
 const adminController = require('../../controllers/adminController.js');
 
 router.post('/add-product', adminAuth, adminController.addProduct);
-router.put('/edit-product', adminAuth, adminController.editProduct);
+router.put('/edit-product/:product_id', adminAuth, adminController.editProduct);
 router.delete('/delete-product/:product_id', adminAuth, adminController.deleteProduct);
 router.get('/view-orders', adminAuth, adminController.fetchAllOrders); //how to use query params
 router.get('/view-order/:order_id', adminAuth, adminController.fetchSpecificOrder);
